--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^20.10.5",
     "axios": "^1.6.2",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "openai": "^4.24.1",
@@ -21,6 +22,7 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21"
   }
 }
