--- a/package.json
+++ b/package.json
@@ -21,14 +21,15 @@
     "@vueuse/core": "^10.7.1",
     "crypto-js": "^4.2.0",
     "eslint-import-resolver-typescript": "^3.6.1",
+    "openai": "^4.56.1",
     "pinia": "^2.1.7",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@types/crypto-js": "^4.1.1",
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node18": "^18.2.2",
+    "@types/crypto-js": "^4.1.1",
     "@types/node": "^18.19.3",
     "@vitejs/plugin-vue": "^4.5.2",
     "@vue/eslint-config-prettier": "^8.0.0",
